<resources>
    <string name="app_name">Rayik</string>
    <string name="sign_up">Sign Up</string>
    <string name="type_here">Type Here</string>
    <string name="fname">First Name</string>
    <string name="lname">Last Name</string>
    <string name="uname">Username</string>
    <string name="uname_placeholder">Type your username here</string>
    <string name="email">Email</string>
    <string name="recover">Recover</string>
    <string name="your_acc">your account</string>
    <string name="enter_email_recov">Enter your email and we will send you a recover link.</string>
    <string name="email_placeholder">Type your email address here</string>
    <string name="age">Age</string>
    <string name="age_placeholder">Type your age here</string>
    <string name="language">Language</string>
    <string name="country">Country</string>
    <string name="city">City</string>
    <string name="city_placeholder">City</string>
    <string name="password">Password</string>
    <string name="password_placeholder">Password</string>
    <string name="conf_password">Confirm Password</string>
    <string name="conf_password_placeholder">Confirm password</string>
    <string name="btn_sign_up">Sign Up</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="login_now">Log In</string>
    <string name="menu_most_rated">Most Rated</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_inbox">Inbox</string>
    <string name="menu_login">Login</string>
    <string name="menu_logout">Logout</string>
    <string name="tab_ratings">Ratings</string>
    <string name="tab_videos">Videos</string>
    <string name="subscribe">Subscribe</string>
    <string name="share">Share</string>
    <string name="report_spam">REPORT SPAM</string>
    <string name="comments">Comments:</string>
    <string name="rate_it">Rate It!: </string>
    <string name="login">Login</string>
    <string name="email_user">Email or Username</string>
    <string name="forgot_pass">Forgot Password?</string>
    <string name="dont_have_account">Don\'t have an account?</string>
    <string name="sign_up_now">Sign up</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="forgot_password_sm">Forgot Password?</string>
    <string name="forgot_text">We just need your registered Email Address to sent you password reset instructions.</string>
    <string name="reset_password">Reset Password</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="change_profile_pic">Change your profile picture</string>
    <string name="save">SAVE</string>
    <string name="click_here">Click here to</string>
    <string name="change_pass">Change your Password</string>
    <string name="change_pass_head">CHANGE PASSWORD</string>
    <string name="old_pass">Old Password</string>
    <string name="new_pass">New Password</string>
    <string name="subscribers">SUBSCRIBERS</string>
    <string name="subscribtions">SUBSCRIBTIONS</string>
    <string name="serach_products">Search products</string>
    <string name="serach_products_placeholder">Search products here</string>
    <string name="my_products">MY PRODUCTS</string>
    <string name="views">Views</string>
    <string name="inbox">Inbox</string>
    <string name="sent">Sent</string>
    <string name="trash">Trash</string>
    <string name="empty_trash">Empty Trash</string>
    <string name="select">Select</string>
    <string name="dob">Date of Birth</string>
    <string name="reply">Reply</string>
    <string name="add_product">ADD PRODUCT</string>
    <string name="title">Title</string>
    <string name="title_placeholder">Type product title here (max 50 characters)</string>
    <string name="description">Product Description</string>
    <string name="description_placeholder">Type product description here(max 550 characters)</string>
    <string name="picture">PICTURE</string>
    <string name="upload_picture">Upload your product picture</string>
    <string name="upload_picture_prod">Upload your product images</string>
    <string name="upload">UPLOAD</string>
    <string name="video">VIDEO</string>
    <string name="upload_video">Upload your product video</string>
    <string name="submit">SUBMIT</string>
    <string name="information_tab">Information</string>
    <string name="image_tab">Image</string>
    <string name="video_tab">Video</string>
    <string name="upload_max">You can upload maximum 5 images</string>
    <string name="message">MESSAGE</string>
    <string name="products">PRODUCTS</string>
    <string name="per_titile">Permission necessary</string>
    <string name="per_msg">External storage permission is necessary</string>
    <string name="take_photo">Take Photo</string>
    <string name="take_video">Take Video</string>
    <string name="chose_from_library">Choose from Library</string>
    <string name="cancel">Cancel</string>
    <string name="add_photo">Add Photo!</string>
    <string name="add_video">Add Video!</string>
    <string name="send_message">SEND MESSAGE</string>
    <string name="message_label">Message</string>
    <string name="message_palceholder">Type your message here</string>
    <string name="send">SEND</string>
    <string name="contact_us">CONTACT US</string>
    <string name="phone">Phone</string>
    <string name="phone_placeholder">Type your phone number</string>
    <string name="login_google">LOGIN WITH GOOGLE</string>
    <string name="sign_up_google">Sign Up with Google</string>
    <string name="select_lang">Select Language</string>
    <string name="select_country">Select Country</string>
    <string name="eng">English</string>
    <string name="arb">Arabic</string>
    <string-array name="language_array">
        <item>Language</item>
        <item>English</item>
        <item>Arabic</item>
    </string-array>
    <string-array name="country_array">
        <item>Country</item>
        <item>India</item>
        <item>USA</item>
        <item>UAE</item>
    </string-array>
    <string name="type_here_comment">Type here (Max 280 Characters)</string>
    <string name="about">About</string>
    <string name="about_type_here">Type Here (max 550 characters)</string>
    <string name="search_product">Search Product</string>
    <string name="rate_and_comment">Comments</string>
    <string name="fname_error">Enter your first name</string>
    <string name="lname_error">Enter your last name</string>
    <string name="uname_error">Enter your user name</string>
    <string name="dob_error">Date of birth is required</string>
    <string name="lang_error">Select preferred language</string>
    <string name="country_error">Select country first</string>
    <string name="city_error">Select city first</string>
    <string name="pass_error">Password is required</string>
    <string name="conf_pass_error">Confirm password doesn\'t match with password</string>
    <string name="email_error">Valid email address is required</string>
    <string name="email_verify">Email Verification</string>
    <string name="email_code">Please enter your verification code sent to your email.</string>
    <string name="verify">Verify</string>
    <string name="resend">Resend</string>
    <string name="reg_succesful">Registration Successful</string>
    <string name="reg_succ_msg">You have successfully registered with us, please verify your email by the code sent to your registered email.</string>
    <string name="email_exist">Email is already registered with us.</string>
    <string name="uname_exist">Username is already registered with us.</string>
    <string name="reg_error">Registration Failed</string>
    <string name="network_error">Network Error</string>
    <string name="chk_connect">Please check your your internet connection.</string>
    <string name="settings">Settings</string>
    <string name="email_verified">Email Verified</string>
    <string name="verify_msg">Email successfully verified with us. Please login to continue.</string>
    <string name="invalid_code">Invalid Code</string>
    <string name="wrong_vcode">You have entered an invalid code</string>
    <string name="about_error">Write something about you.</string>
    <string name="profile_updated">Profile Updated</string>
    <string name="pro_succ">You have successfully updated your profile, click ok to continue.</string>
    <string name="proviews">5 views</string>
    <string name="no_data">No Data Available</string>
    <string name="load_more">Load More</string>
    <string name="title_error">Enter your product title.</string>
    <string name="desc_error">Enter your product description</string>
    <string name="product_added">Product Added</string>
    <string name="pro_succ_add">Product successfully added.</string>
    <string name="image_succ_add">Image successfully added.</string>
    <string name="video_succ_add">Video successfully added.</string>
    <string name="pro_updated">Update Successful</string>
    <string name="update_succes">Product successfully updated</string>
    <string name="acc_unverify">Your account is not verified. Please verify your account to login.</string>
    <string name="acc_unveri_head">Account Not Verified</string>
    <string name="not_now">Not now</string>
    <string name="acc_inac_head">Account Inactive</string>
    <string name="acc_inac_msg">Your account is inactive. Please contact info@rayik.com for further information</string>
    <string name="invalid_email_head">Invalid Email/Password</string>
    <string name="invalid_msg">You have entered an invalid email/password. Please enter your registered email and password to login</string>
    <string name="invalid_pro_pic">Invalid Profile Picture</string>
    <string name="invalid_pro_pic_msg">Profile picture uploading failed please try with another picture.</string>
    <string name="upload_error">Uploading Error</string>
    <string name="upload_error_msg">Error occurred while uploading your product resource please try again.</string>
    <string name="del_resource_vid">Video Deleted</string>
    <string name="vid_del_msg">Your previous video deleted , now you can add another video for this product.</string>
    <string name="del_resource_img">Image Deleted</string>
    <string name="img_del_msg">You have successfully deleted the image.</string>
    <string name="gallery">Gallery</string>
    <string name="phone_error">Please enter phone number</string>
    <string name="request_send">Contact Request Sent</string>
    <string name="req_suc_msg">Our team has got your query and will get back to you soon.</string>
    <string name="del_pro">Product Delete</string>
    <string name="del_pro_msg">Are you sure you want to delete the product?</string>
    <string name="unsubscribe">Unsubscribe</string>
    <string name="field_error">Field is required.</string>
    <string name="reported_suc">Reported</string>
    <string name="report_suc_msg">You have successfully reported this product to admin. Admin will review it and take necessary action.</string>
    <string name="comm_msg">Comment Posted</string>
    <string name="comm_suc_msg">Your comment and rating posted successfully. Thank you for your review</string>
    <string name="trash_msg">Trash Message</string>
    <string name="trash_msg_suc">Message successfully moved to trash</string>
    <string name="msg_sent">Message Sent</string>
    <string name="msg_sent_suc">Message successfully sent to the user.</string>
    <string name="chng_pass">Password Changed</string>
    <string name="chng_pass_suc">You have changed your password successfully.</string>
    <string name="add_img_err">You must have select a product image or product video.</string>
    <string name="img_add">Image add</string>
    <string name="vide_add">Video Add</string>
    <string name="upload_size_image">(Max Upload Size 1 mb)</string>
    <string name="upload_size_video">(Max Upload Size 400 mb)</string>
</resources>