<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="locale"
    android:orientation="vertical">

    <ScrollView
        android:id="@+id/reg_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorWhite"
        android:layoutDirection="locale">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <LinearLayout
                android:id="@+id/root"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal">

                <ImageView
                    android:id="@+id/logo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_margin="30dp"
                    android:src="@drawable/inner_logo" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp">

                <EditText
                    android:id="@+id/fname"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginTop="5sp"
                    android:background="@drawable/rounded_corner_editetext"
                    android:drawableLeft="@drawable/name"
                    android:drawablePadding="20dp"
                    android:gravity="start|center_vertical"
                    android:hint="@string/fname"
                    android:maxLines="1"
                    android:layoutDirection="ltr"
                    android:paddingLeft="20dp"
                    android:singleLine="true"
                    android:textAlignment="viewStart"
                    android:textColor="@color/colorAccent"
                    android:textColorHint="@color/colorPlaceholder"
                    android:textStyle="normal" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp">


                <EditText
                    android:id="@+id/lname"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:background="@drawable/rounded_corner_editetext"
                    android:drawableLeft="@drawable/name"
                    android:drawablePadding="20dp"
                    android:gravity="start|center_vertical"
                    android:hint="@string/lname"
                    android:maxLines="1"
                    android:layoutDirection="ltr"
                    android:paddingLeft="20dp"
                    android:singleLine="true"
                    android:textAlignment="viewStart"
                    android:textColor="@color/colorAccent"
                    android:textColorHint="@color/colorPlaceholder"
                    android:textStyle="normal" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp">

                <EditText
                    android:id="@+id/uname"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginTop="5sp"
                    android:background="@drawable/rounded_corner_editetext"
                    android:drawableLeft="@drawable/name"
                    android:drawablePadding="20dp"
                    android:gravity="start|center_vertical"
                    android:hint="@string/uname"
                    android:layoutDirection="ltr"
                    android:maxLines="1"
                    android:paddingLeft="20dp"
                    android:singleLine="true"
                    android:textAlignment="viewStart"
                    android:textColor="@color/colorAccent"
                    android:textColorHint="@color/colorPlaceholder"
                    android:textDirection="ltr"
                    android:textStyle="normal" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp">

                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginTop="5sp"
                    android:background="@drawable/rounded_corner_editetext"
                    android:drawableLeft="@drawable/email"
                    android:drawablePadding="20dp"
                    android:gravity="start|center_vertical"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:layoutDirection="ltr"
                    android:maxLines="1"
                    android:paddingLeft="20dp"
                    android:singleLine="true"
                    android:textAlignment="viewStart"
                    android:textColor="@color/colorAccent"
                    android:textColorHint="@color/colorPlaceholder"
                    android:textDirection="ltr"
                    android:textStyle="normal" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp">

                <EditText
                    android:id="@+id/dob"
                    android:layout_width="match_parent"
                    android:layout_height="60sp"
                    android:layout_marginTop="5sp"
                    android:background="@drawable/rounded_corner_editetext"
                    android:drawablePadding="20dp"
                    android:drawableStart="@drawable/bate_of_birth"
                    android:drawableTint="@color/colorGrayDark"
                    android:editable="false"
                    android:focusable="false"
                    android:gravity="start|center_vertical"
                    android:hint="@string/dob"
                    android:layoutDirection="ltr"
                    android:textDirection="ltr"
                    android:maxLines="1"
                    android:paddingLeft="20dp"
                    android:singleLine="true"
                    android:textAlignment="viewStart"
                    android:textColor="@color/colorAccent"
                    android:textColorHint="@color/colorPlaceholder"
                    android:textStyle="normal" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/rounded_corner_editetext">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <Spinner
                        android:id="@+id/language_list"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:entries="@array/language_array"
                        android:gravity="start|center_vertical"
                        android:maxLines="1"
                        android:paddingLeft="20sp"
                        android:singleLine="true"
                        android:layoutDirection="ltr"
                        android:spinnerMode="dropdown"
                        android:textAlignment="viewStart"
                        android:textColor="@color/colorAccent"
                        android:textDirection="locale"
                        android:textStyle="normal" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/rounded_corner_editetext">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <Spinner
                        android:id="@+id/country_list"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:entries="@array/country_array"
                        android:gravity="start|center_vertical"
                        android:maxLines="1"
                        android:paddingLeft="20dp"
                        android:singleLine="true"
                        android:layoutDirection="ltr"
                        android:spinnerMode="dropdown"
                        android:textAlignment="viewStart"
                        android:textColor="@color/colorAccent"
                        android:textDirection="locale"
                        android:textStyle="normal" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp">

                <EditText
                    android:id="@+id/city"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:background="@drawable/rounded_corner_editetext"
                    android:gravity="start|center_vertical"
                    android:hint="@string/city_placeholder"
                    android:maxLines="1"
                    android:layoutDirection="ltr"
                    android:textDirection="ltr"
                    android:paddingLeft="20dp"
                    android:singleLine="true"
                    android:textAlignment="viewStart"
                    android:textColor="@color/colorAccent"
                    android:textColorHint="@color/colorPlaceholder"
                    android:textStyle="normal" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp">

                <EditText
                    android:id="@+id/pass1"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:background="@drawable/rounded_corner_editetext"
                    android:drawableLeft="@drawable/password"
                    android:drawablePadding="20dp"
                    android:drawableRight="@drawable/show_password"
                    android:gravity="start|center_vertical"
                    android:hint="@string/password_placeholder"
                    android:inputType="textPassword"
                    android:layoutDirection="ltr"
                    android:maxLines="1"
                    android:paddingEnd="20dp"
                    android:paddingLeft="20dp"
                    android:singleLine="true"
                    android:textAlignment="viewStart"
                    android:textColor="@color/colorAccent"
                    android:textColorHint="@color/colorPlaceholder"
                    android:textDirection="ltr"
                    android:textStyle="normal" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp">

                <EditText
                    android:id="@+id/pass2"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:background="@drawable/rounded_corner_editetext"
                    android:drawableLeft="@drawable/password"
                    android:drawablePadding="20dp"
                    android:drawableRight="@drawable/show_password"
                    android:gravity="start|center_vertical"
                    android:hint="@string/conf_password_placeholder"
                    android:inputType="textPassword"
                    android:layoutDirection="ltr"
                    android:maxLines="1"
                    android:paddingEnd="20dp"
                    android:paddingLeft="20dp"
                    android:singleLine="true"
                    android:textAlignment="viewStart"
                    android:textColor="@color/colorAccent"
                    android:textColorHint="@color/colorPlaceholder"
                    android:textDirection="ltr"
                    android:textStyle="normal" />
            </LinearLayout>

            <Button
                android:id="@+id/save"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/rounded_edittext_signup"
                android:onClick="register"
                android:text="@string/btn_sign_up"
                android:layoutDirection="ltr"
                android:textDirection="ltr"
                android:textColor="@color/colorWhite"
                android:textSize="20sp"
                android:textStyle="bold" />

            <include layout="@layout/textbetweenlines"
                />

            <LinearLayout
                android:id="@+id/loginGoogle"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/rounded_edittext_google"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="30sp"
                    android:layout_height="30sp"
                    android:layout_gravity="center"
                    android:layout_marginEnd="10sp"
                    android:layout_marginStart="10sp"
                    android:src="@drawable/google" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:gravity="center"
                    android:text="@string/sign_up_google"
                    android:layoutDirection="ltr"
                    android:textDirection="ltr"
                    android:textColor="@color/colorWhite"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10sp"
                android:layout_marginTop="10sp"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/already_have_account"
                    android:textColor="@color/colorGrayDark"
                    android:textSize="18sp"
                    android:id="@+id/alreadyText"
                    android:textStyle="normal" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10sp"
                    android:onClick="login"
                    android:text="@string/login_now"
                    android:layoutDirection="ltr"
                    android:textDirection="ltr"
                    android:id="@+id/loginText"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="18sp"
                    android:textStyle="normal" />
            </LinearLayout>
        </LinearLayout>

    </ScrollView>

    <!--<include-->
    <!--android:id="@+id/footer"-->
    <!--layout="@layout/footer"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="60sp"-->
    <!--android:layout_alignParentBottom="true" />-->
</RelativeLayout>
